--- a/denhik.htm
+++ b/denhik.htm
@@ -9,7 +9,7 @@
 	<br><h1>Дайлов Денис</h1>
 	<br> <img src="image/denhik.jpg" width="100px" height="50%">
 	<br> <h2>хач на ауди 100</h2>
-	<br> <a href="First.htm">back</a>
+	<br> <a href="index.htm">back</a>
 
 </body>
 </html>
