--- a/prepodha.htm
+++ b/prepodha.htm
@@ -9,7 +9,7 @@
 	<br> <h1>Карбан Любовь Алесандровна</h1>
 	<br> <img src="image/prepodha.jpg" width="100px" height="50%">
 	<br> <h2>любимый преподователь</h2>
-	<br> <a href="First.htm">back</a>
+	<br> <a href="index.html">back</a>
 
 
 
