--- a/miha.htm
+++ b/miha.htm
@@ -9,6 +9,6 @@
 	<br> <h1>Щугорев Михаил</h1>
 	<br> <img src="image/miha.jpg" width="100px" height="50%">
 	<br> <h2>н1 по геншин инпукт</h2>
-	<br> <a href="First.htm">back</a>
+	<br> <a href="index.html">back</a>
 </body>
 </html>
