--- a/dima.htm
+++ b/dima.htm
@@ -9,7 +9,7 @@
     <h1>Воробьев Дмитрий</h1>
     <br> <img src="image/dimos.jpg" width="100px" height="50%">
     <br> <h2>топ 100 европы в дота2 на вокере</h2>
-    <br> <a href="First.htm">back</a>
+    <br> <a href="index.html">back</a>
 
 </body>
 </html>
